RESOLVED FIXED138062
Share sheet doesn't attach to the window
https://bugs.webkit.org/show_bug.cgi?id=138062
Summary Share sheet doesn't attach to the window
Tim Horton
Reported 2014-10-24 15:58:11 PDT
Share sheet doesn't attach to the window
Attachments
Patch (3.45 KB, patch)
2014-10-24 15:58 PDT, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2014-10-24 15:58:35 PDT
Tim Horton
Comment 2 2014-10-24 16:00:36 PDT
Conrad Shultz
Comment 3 2014-10-24 16:07:24 PDT
Comment on attachment 240444 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=240444&action=review > Source/WebKit2/UIProcess/mac/WKActionMenuController.h:46 > +@interface WKActionMenuController : NSObject <NSSharingServiceDelegate, NSSharingServicePickerDelegate> { Can this be done in a class extension instead?
Tim Horton
Comment 4 2014-10-24 16:15:26 PDT
(In reply to comment #3) > Comment on attachment 240444 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=240444&action=review > > > Source/WebKit2/UIProcess/mac/WKActionMenuController.h:46 > > +@interface WKActionMenuController : NSObject <NSSharingServiceDelegate, NSSharingServicePickerDelegate> { > > Can this be done in a class extension instead? Oops, I missed this before landing. Maybe I can! I'll have to see. http://trac.webkit.org/changeset/175190
Note You need to log in before you can comment on or make changes to this bug.